--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -10,17 +10,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
     "firebase": "^9.15.0",
+    "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2",
-   
+    "react-router-dom": "^6.7.0",
     "web-vitals": "^2.1.4"
   },
-   "devDependencies":
-   {
- "react-scripts": "5.0.1"
-   },
+  "devDependencies": {
+    "react-scripts": "5.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
