--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "create-react-app": "^5.0.1",
     "firebase": "^9.15.0",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
